# cpp-sdk

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.py  vcpkg.json
.github/workflows/: ci.yml  release.yml
include/bulutklinik/: bulutklinik.hpp
src/: bulutklinik.cpp  cpr_backend.cpp
tests/: test_ai.cpp  test_lab_diets.cpp  test_transport.cpp
